--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -14,7 +14,7 @@ h1{
 .hero{
     max-width: 1600px;
     height: 600px;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/Img.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Img.jpg);
     text-align: center;
     margin-left: auto;
     margin-right: auto;
