--- a/css/porpholio.css
+++ b/css/porpholio.css
@@ -383,6 +383,50 @@ button {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
+.footer-form {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+}
+
+.primary-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: 200px;
+  border-radius: 4px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 50px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  background-color: #2196F3;
+}
+
+.send-sms::after {
+  content: '';
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: 24px;
+  height: 24px;
+  margin-left: 10px;
+  background-image: url("../img/send.svg");
+  background-size: contain;
+}
+
 .logo-title {
   font-weight: bold;
   font-size: 26px;
